v01.03.00 - Formatting Fixes
- Doc title formatting fix
- Fixes to home page formatting, and layout issues
- Changed ATS subsection header links to only be on linkLabel

--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -17,7 +17,7 @@ h6 {
 html,
 body,
 #app {
-    height: 100%;
+    min-height: 100vh;
 }
 
 #app {
